   strides. Data was read from incorrect (and possibly uninitialized)
   memory space. This bug was probably introduced in 0.5rc1.
 * The Theano flag "nvcc.flags" are now included in the hard part of the key.
   This mean that now we recompile all modules for each value of "nvcc.flags".
   This do use change the default, but if you used this flags, it was ignored
   for module already compiled.

=============
Release Notes
=============

If you have updated to 0.5rc1, you are highly encouraged to update to
0.5rc2. There are more bug fixes and speed uptimization! But there is
also a small new interface change about sum of [u]int* dtype.


Modifications in the trunk since the 0.4.1 release (August 12th, 2011)
======================================================================

Upgrading to Theano 0.5rc2 is recommended for everyone, but you should first make
sure that your code does not raise deprecation warnings with Theano 0.4.1.
Otherwise, in one case the results can change. In other cases, the warnings are
turned into errors (see below for details).


Highlight:
 * Moved to github: http://github.com/Theano/Theano/
 * Old trac ticket moved to assembla ticket: http://www.assembla.com/spaces/theano/tickets
 * Theano vision: http://deeplearning.net/software/theano/introduction.html#theano-vision (Many people)
 * Theano with GPU works in some cases on Windows now. Still experimental. (Sebastian Urban)
 * Faster dot() call: New/Better direct call to cpu and gpu ger, gemv, gemm and dot(vector, vector). (James, Frédéric, Pascal)
 * C implementation of Alloc. (James, Pascal)
 * theano.grad() now also work with sparse variable. (Arnaud)
 * Macro to implement the Jacobian/Hessian with theano.tensor.{jacobian,hessian} (Razvan)
 * See the Interface changes.


Interface Behavior Change (was deprecated and generated a warning since Theano 0.3 released Nov. 23rd, 2010):
 * The current default value of the parameter axis of